# logwatch

./: Cargo.toml  README.md
src/: lib.rs  main.rs  pollwatch.rs  tailwatch.rs
tests/: logwatch.rs
